--- a/frontend-taskManager/package.json
+++ b/frontend-taskManager/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "ag-grid-angular": "^31.3.2",
+    "ag-grid-community": "^31.3.2",
     "bootstrap": "^5.3.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
